--- a/packages/documentation/src/pages/platform/tools/downtime-notifications.mdx
+++ b/packages/documentation/src/pages/platform/tools/downtime-notifications.mdx
@@ -22,7 +22,7 @@ Prerequisites
     - These services should be available in [externalServices](https://github.com/department-of-veterans-affairs/vets-website/blob/90152b7cdf5b53d6650b44fed832995dbf7660cb/src/platform/monitoring/DowntimeNotification/config/externalServices.js) if they have not already been. The value must match that in the devops [config](https://github.com/department-of-veterans-affairs/devops/blob/a4b5432061ae60a4f77952bbe5f668a1355ee007/ansible/deployment/config/vets-api/prod-settings.local.yml.j2#L232).
     - These dependencies may not be directly accessed by your application, but are more likely to be dependencies of the API method(s) consumed by your application. For example, the Search app requires Search.gov to function, even though it doesn't directly hit Search.gov.
     
-### Forms applications
+### Forms library applications
 1. Import the services enum
 ```
 import { externalServices } from 'platform/monitoring/DowntimeNotification'
@@ -43,6 +43,8 @@ import { externalServices } from 'platform/monitoring/DowntimeNotification'
       - given a user is logged in and has a saved form, when any services in the dependency array are down, then display the downtime notification before application submission
       - given a user is not logged in, 
     - `false` [default]: when any services in the dependencies array are down, then display the downtime notification before application submission
+
+_The DowntimeNotifications component wraps the `FormStartControls` on the introduction page and the `SubmitController` on the review page. Users can edit and save forms for later during a downtime unless `requiredForPrefill` is true._
 
 ### React applications 
 1. Import the Downtime Notification React component into the application React code, usually the topmost container.
