added treasury contact

--- a/packages/formation-react/src/components/Telephone/Telephone.mdx
+++ b/packages/formation-react/src/components/Telephone/Telephone.mdx
@@ -145,6 +145,7 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
 | `NCA`                         | `8005351117` | National Cemetery Scheduling Office                                                                          |
 | `SUICIDE_PREVENTION_LIFELINE` | `8007994889` | Suicide Prevention Line                                                                                      |
 | `TESC`                        | `8882242950` | U.S. Treasury Electronic Payment Solution Center                                                             |
+| `TREASURY_DMS`                | `8888263127` | U.S. Department of the Treasury (Debt Management Services)                                                   |  |  |
 | `VA_311`                      | `8446982311` | VA Help desk (VA311)                                                                                         |
 | `VA_BENEFITS`                 | `8008271000` | Veterans Benefits Assistance                                                                                 |
 
