They're not actually required...

--- a/packages/documentation/src/pages/forms/config-options.mdx
+++ b/packages/documentation/src/pages/forms/config-options.mdx
@@ -82,7 +82,7 @@ const formConfig = {
   // Legacy SiP configuration such as savedFormMessages will be moved into saveInProgress.
   // All new SiP configuration will go here.
   saveInProgress: {
-    // These messages are required and will be displayed as-is when appropriate.
+    // These messages will be displayed as-is when appropriate.
     // The following are examples from the education benefit form 22-1995
     messages: {
       inProgress:
