--- a/packages/documentation/src/pages/forms/config-options.mdx
+++ b/packages/documentation/src/pages/forms/config-options.mdx
@@ -78,6 +78,20 @@ const formConfig = {
     notFound: errorMessages.savedFormNotFound,
     noAuth: errorMessages.savedFormNoAuth,
   },
+
+  // Legacy SiP configuration such as savedFormMessages will be moved into saveInProgress.
+  // All new SiP configuration will go here.
+  saveInProgress: {
+    // These messages will be displayed as-is when appropriate.
+    // The following are examples from the education benefit form 22-1995
+    messages: {
+      inProgress:
+        'Your education benefits application (22-1995) is in progress.',
+      expired:
+        'Your saved education benefits application (22-1995) has expired. If you want to apply for education benefits, please start a new application.',
+      saved: 'Your education benefits application has been saved.',
+    },
+  },
   prefillEnabled: false,
   downtime: {
     requiredForPrefill: true,
