--- a/packages/formation-react/src/components/AcceptTermsPrompt/AcceptTermsPrompt.mdx
+++ b/packages/formation-react/src/components/AcceptTermsPrompt/AcceptTermsPrompt.mdx
@@ -4,26 +4,40 @@ name: AcceptTermsPrompt
 tags: terms prompt, component
 ---
 
-import AcceptTermsPrompt from './AcceptTermsPrompt'
+import AcceptTermsPrompt from './AcceptTermsPrompt';
 
 ### Code:
+
 ```javascript
-import AcceptTermsPrompt from '@department-of-veterans-affairs/formation-react/AcceptTermsPrompt'
+import AcceptTermsPrompt from '@department-of-veterans-affairs/formation-react/AcceptTermsPrompt';
 
 <AcceptTermsPrompt
-  terms={{termsContent: '<div><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p></div>', headerContent: 'test header content', title: 'Terms and Conditions',footerContent:'test footer content', yesContent: 'accept terms and conditions'}}
-  onAccept={()=>{}}
-  onCancel={()=>{}}
-/>
+  terms={{
+    termsContent:
+      '<div><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p></div>',
+    headerContent: 'test header content',
+    title: 'Terms and Conditions',
+    footerContent: 'test footer content',
+    yesContent: 'accept terms and conditions',
+  }}
+  onAccept={() => {}}
+  onCancel={() => {}}
+/>;
 ```
 
 ### Rendered Component:
+
 <div className="site-c-reactcomp__rendered">
   <AcceptTermsPrompt
     terms={{
-      termsContent: '<div><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p></div>', headerContent: 'test header content', title: 'Terms and Conditions',footerContent:'test footer content', yesContent: 'accept terms and conditions'
+      termsContent:
+        '<div><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p></div>',
+      headerContent: 'test header content',
+      title: 'Terms and Conditions',
+      footerContent: 'test footer content',
+      yesContent: 'accept terms and conditions',
     }}
-    onAccept={()=>{}}
-    onCancel={()=>{}}
+    onAccept={() => {}}
+    onCancel={() => {}}
   />
 </div>
