--- a/packages/formation-react/src/components/ErrorableDate/ErrorableDate.stories.mdx
+++ b/packages/formation-react/src/components/ErrorableDate/ErrorableDate.stories.mdx
@@ -4,7 +4,7 @@ import ErrorableDate from './ErrorableDate';
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import { useState } from 'react';
 
-<Meta title="Library/ErrorableDate" component={ErrorableDate} />
+<Meta title="MDX/ErrorableDate" component={ErrorableDate} />
 
 # ErrorableDate
 
