--- a/packages/documentation/src/pages/forms/about-the-schema-and-uischema-objects.mdx
+++ b/packages/documentation/src/pages/forms/about-the-schema-and-uischema-objects.mdx
@@ -249,7 +249,7 @@ The VAFS code includes additional `uiSchema` functionality not found in the RJSF
     widgetClassNames: '',
 
     // For array fields, this component is shown when the item in the array is rendered as
-    // read-only on a page that is not a review pgit age.
+    // read-only on a page that is not a review page.
     viewField: RowViewComponent,
 
     // For array fields, this will toggle the auto-scroll that happens when an item is added
