Remove Story from horizontal rules

--- a/packages/formation-react/stories/horizontal-rules.stories.mdx
+++ b/packages/formation-react/stories/horizontal-rules.stories.mdx
@@ -5,7 +5,5 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 # Stars
 
 <Canvas>
-  <Story name="Stars">
-    {() => ( <div class="va-h-ruled--stars"></div> )}
-  </Story>
+    <div class="va-h-ruled--stars"></div>
 </Canvas>
