Remove Story from labels

--- a/packages/formation-react/stories/labels.stories.mdx
+++ b/packages/formation-react/stories/labels.stories.mdx
@@ -7,9 +7,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 Labels draw attention to new or important content.
 
 <Canvas>
-  <Story name="Usage">
-    {() => <span class="usa-label">New</span>}
-  </Story>
+  <span class="usa-label">New</span>
 </Canvas>
 
 ## Accessibility
