--- a/packages/formation-react/stories/featured-content.stories.mdx
+++ b/packages/formation-react/stories/featured-content.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story } from '@storybook/addon-docs/blocks';
+import { Meta, Canvas } from '@storybook/addon-docs/blocks';
 
 <Meta title="Library/Featured content" />
 
@@ -8,20 +8,18 @@ Call attention to important blocks of content.
 
 Features are typically used to describe eligibility requirements.
 
-<Story name="Default">
-  {() => (
-    <div class="feature">
-      <h3>If I’m a Veteran, can I get VR&amp;E benefits and services?</h3>
-      <p>You may be eligible for VR&amp;E benefits and services if you’re a Veteran, and you meet all of the requirements listed below.</p>
-      <p><strong>All of these must be true. You:</strong></p>
-      <ul>
-        <li>Didn’t receive a dishonorable discharge, <strong>and</strong></li>
-        <li>Have a service-connected disability rating of at least 10% from VA, <strong>and</strong></li>
-        <li><a href="#">Apply for VR&amp;E services</a></li>
-      </ul>
-    </div>
-  )}
-</Story>
+<Canvas>
+  <div class="feature">
+    <h3>If I’m a Veteran, can I get VR&amp;E benefits and services?</h3>
+    <p>You may be eligible for VR&amp;E benefits and services if you’re a Veteran, and you meet all of the requirements listed below.</p>
+    <p><strong>All of these must be true. You:</strong></p>
+    <ul>
+      <li>Didn’t receive a dishonorable discharge, <strong>and</strong></li>
+      <li>Have a service-connected disability rating of at least 10% from VA, <strong>and</strong></li>
+      <li><a href="#">Apply for VR&amp;E services</a></li>
+    </ul>
+  </div>
+</Canvas>
 
 ## Guidance
 
