Remove Story from buttons

--- a/packages/formation-react/stories/buttons.stories.mdx
+++ b/packages/formation-react/stories/buttons.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import { Meta, Canvas } from '@storybook/addon-docs/blocks';
 
 <Meta title="Library/Buttons" />
 
@@ -10,34 +10,30 @@ Use buttons to signal actions.
 
 The default buttons are the most commonly-used button on the site.
 
-<Story name="Default">
-  {() => (
-    <div>
-      <button type="button" className="usa-button">Button</button>
-      <button type="button" className="usa-button usa-button-active">Active</button>
-      <button type="button" className="usa-button usa-button-hover">Hover</button>
-      <br/>
-      <a href="#" className="usa-button">Link button</a>
-      <a href="#" className="usa-button usa-button-active">Link button active</a>
-      <a href="#" className="usa-button usa-button-hover">Link button hover</a>
-    </div>
-  )}
-</Story>
+<Canvas>
+  <div>
+    <button type="button" className="usa-button">Button</button>
+    <button type="button" className="usa-button usa-button-active">Active</button>
+    <button type="button" className="usa-button usa-button-hover">Hover</button>
+    <br/>
+    <a href="#" className="usa-button">Link button</a>
+    <a href="#" className="usa-button usa-button-active">Link button active</a>
+    <a href="#" className="usa-button usa-button-hover">Link button hover</a>
+  </div>
+</Canvas>
 
 ## Primary buttons
 
 Use the **primary** button for the primary action on a page.
 
 
-<Story name="Primary">
-  {() => (
-    <div>
-      <button type="button" class="usa-button-primary va-button-primary">Button</button>
-      <br/>
-      <a class="usa-button-primary va-button-primary" href="#">Link button</a>
-    </div>
-  )}
-</Story>
+<Canvas>
+  <div>
+    <button type="button" class="usa-button-primary va-button-primary">Button</button>
+    <br/>
+    <a class="usa-button-primary va-button-primary" href="#">Link button</a>
+  </div>
+</Canvas>
 
 
 ### Research insight
@@ -49,52 +45,46 @@ Our researchers learned that users were missing calls to action on some pages be
 Use **secondary** buttons for any actions that need to be _downplayed_ against other actions.
 
 
-<Story name="Secondary">
-  {() => (
-    <div>
-      <button class="usa-button-secondary">Button</button>
-      <button class="usa-button-secondary usa-button-active">Active</button>
-      <button class="usa-button-secondary usa-button-hover">Hover</button>
-      <br/>
-      <a href="#" class="usa-button usa-button-secondary">Link button</a>
-      <a href="#" class="usa-button usa-button-secondary usa-button-active">Link button active</a>
-      <a href="#" class="usa-button usa-button-secondary usa-button-hover">Link button hover</a>
-    </div>
-  )}
-</Story>
+<Canvas>
+  <div>
+    <button class="usa-button-secondary">Button</button>
+    <button class="usa-button-secondary usa-button-active">Active</button>
+    <button class="usa-button-secondary usa-button-hover">Hover</button>
+    <br/>
+    <a href="#" class="usa-button usa-button-secondary">Link button</a>
+    <a href="#" class="usa-button usa-button-secondary usa-button-active">Link button active</a>
+    <a href="#" class="usa-button usa-button-secondary usa-button-hover">Link button hover</a>
+  </div>
+</Canvas>
 
 ## Big buttons
 
 Any button can be made bigger by adding a class name of `usa-button-big` to the button.
 
 
-<Story name="Big">
-  {() => (
-    <div>
-      <button type="button" class="usa-button usa-button-big">Default button</button>
-      <button type="button" class="usa-button-primary va-button-primary usa-button-big">Button</button>
-      <button class="usa-button-secondary usa-button-big">Secondary button</button>
-      <br/>
-      <a href="#" class="usa-button usa-button-big">Default link button</a>
-      <a href="#" class="usa-button-primary va-button-primary usa-button-big">Primary link</a>
-      <a href="#" class="usa-button usa-button-secondary usa-button-big">Secondary link</a>
-    </div>
-  )}
-</Story>
+<Canvas>
+  <div>
+    <button type="button" class="usa-button usa-button-big">Default button</button>
+    <button type="button" class="usa-button-primary va-button-primary usa-button-big">Button</button>
+    <button class="usa-button-secondary usa-button-big">Secondary button</button>
+    <br/>
+    <a href="#" class="usa-button usa-button-big">Default link button</a>
+    <a href="#" class="usa-button-primary va-button-primary usa-button-big">Primary link</a>
+    <a href="#" class="usa-button usa-button-secondary usa-button-big">Secondary link</a>
+  </div>
+</Canvas>
 
 ## Disabled buttons
 
 Only `<button>` elements can be disabled with a `disabled` attribute. To make a `<a>` element disabled, you must use `.usa-button.usa-button-disabled` on the element.
 
 
-<Story name="disabled">
-  {() => (
-    <div>
-      <button type="button" class="usa-button" disabled>Disabled button</button>
-      <a href="#" class="usa-button usa-button-disabled">Disabled link</a>
-    </div>
-  )}
-</Story>
+<Canvas>
+  <div>
+    <button type="button" class="usa-button" disabled>Disabled button</button>
+    <a href="#" class="usa-button usa-button-disabled">Disabled link</a>
+  </div>
+</Canvas>
 
 
 ## Guidance
