--- a/packages/formation-react/stories/sidenav.stories.mdx
+++ b/packages/formation-react/stories/sidenav.stories.mdx
@@ -1,4 +1,4 @@
-import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
+import { Canvas, Meta } from '@storybook/addon-docs/blocks';
 
 <Meta title="Library/Sidenav" />
 
@@ -7,89 +7,85 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 Hierarchical, vertical navigation to place at the side of a page.
 
 <Canvas>
-  <Story name="Usage">
-    {() => (
-      <div class="vads-l-grid-container large-screen:vads-u-padding-x--0 vads-u-padding-y--2">
-        <div class="vads-l-row vads-u-margin-x--neg2p5">
-          <div class="vads-l-col--12 vads-u-padding-x--2p5 medium-screen:vads-l-col--4 large-screen:vads-l-col--3">
-            <nav class="va-sidebarnav vads-u-width--full" id="va-detailpage-sidebar">
-              <div>
-                <button type="button" aria-label="Close this menu" class="va-btn-close-icon va-sidebarnav-close"></button>
-                <div class="left-side-nav-title">
-                  <h4>Section title</h4>
-                </div>
-                <ul class="usa-accordion">
-                  <li>
-                    <button class="usa-accordion-button" aria-expanded="false" aria-controls="a1">
-                      Nav section
-                    </button>
-                    <div id="a1" class="usa-accordion-content" aria-hidden="true">
-                      <ul class="usa-sidenav-list">
-                        <li>
-                          <a href="#">Link</a>
-                        </li>
-                        <li>
-                          <a href="#">Link</a>
-                        </li>
-                        <li>
-                          <a href="#">Link</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </li>
-                  <li>
-                    <button class="usa-accordion-button" aria-expanded="true" aria-controls="a2">
-                      Second nav section
-                    </button>
-                    <div id="a2" class="usa-accordion-content" aria-hidden="false">
-                      <ul class="usa-sidenav-list">
-                        <li>
-                          <a href="#">Link</a>
-                        </li>
-                        <li class="active-level">
-                          <a class="usa-current" href="#">Current section</a>
-                        </li>
-                        <li>
-                          <a href="#">Link</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </li>
-                  <li>
-                    <button class="usa-accordion-button" aria-expanded="false" aria-controls="a3">
-                      Third nav section
-                    </button>
-                    <div id="a3" class="usa-accordion-content" aria-hidden="true">
-                      <ul class="usa-sidenav-list">
-                        <li>
-                          <a href="#">Link</a>
-                        </li>
-                        <li>
-                          <a href="#">Link</a>
-                        </li>
-                        <li>
-                          <a href="#">Link</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-          </div>
-          <div class="vads-l-col--12 vads-u-padding-x--2p5 medium-screen:vads-l-col--8 large-screen:vads-l-col--9">
-            <div style={{ opacity: 0.5 }}>
-              <h1 class="vads-u-margin-top--0">Page content would appear here.</h1>
-              <p class="va-introtext"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dictum mauris at laoreet dictum.</p>
-              <p>Mauris ultrices pellentesque lobortis. Ut sed libero vitae orci maximus molestie et id justo. Donec feugiat elit sed pretium condimentum. Sed in cursus dui, eget sodales nisl. In hac habitasse platea dictumst. Fusce eu lacus in purus sodales ullamcorper scelerisque in massa. Duis venenatis, orci nec lacinia dictum, nisl eros lobortis sapien, vel pharetra nisi nulla quis tortor.  </p>
-              <p>Mauris ultrices pellentesque lobortis. Ut sed libero vitae orci maximus molestie et id justo. Donec feugiat elit sed pretium condimentum. Sed in cursus dui, eget sodales nisl. In hac habitasse platea dictumst. Fusce eu lacus in purus sodales ullamcorper scelerisque in massa. Duis venenatis, orci nec lacinia dictum, nisl eros lobortis sapien, vel pharetra nisi nulla quis tortor.  </p>
-              <p>Mauris ultrices pellentesque lobortis. Ut sed libero vitae orci maximus molestie et id justo. Donec feugiat elit sed pretium condimentum. Sed in cursus dui, eget sodales nisl. In hac habitasse platea dictumst. Fusce eu lacus in purus sodales ullamcorper scelerisque in massa. Duis venenatis, orci nec lacinia dictum, nisl eros lobortis sapien, vel pharetra nisi nulla quis tortor.  </p>
+  <div class="vads-l-grid-container large-screen:vads-u-padding-x--0 vads-u-padding-y--2">
+    <div class="vads-l-row vads-u-margin-x--neg2p5">
+      <div class="vads-l-col--12 vads-u-padding-x--2p5 medium-screen:vads-l-col--4 large-screen:vads-l-col--3">
+        <nav class="va-sidebarnav vads-u-width--full" id="va-detailpage-sidebar">
+          <div>
+            <button type="button" aria-label="Close this menu" class="va-btn-close-icon va-sidebarnav-close"></button>
+            <div class="left-side-nav-title">
+              <h4>Section title</h4>
             </div>
+            <ul class="usa-accordion">
+              <li>
+                <button class="usa-accordion-button" aria-expanded="false" aria-controls="a1">
+                  Nav section
+                </button>
+                <div id="a1" class="usa-accordion-content" aria-hidden="true">
+                  <ul class="usa-sidenav-list">
+                    <li>
+                      <a href="#">Link</a>
+                    </li>
+                    <li>
+                      <a href="#">Link</a>
+                    </li>
+                    <li>
+                      <a href="#">Link</a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                <button class="usa-accordion-button" aria-expanded="true" aria-controls="a2">
+                  Second nav section
+                </button>
+                <div id="a2" class="usa-accordion-content" aria-hidden="false">
+                  <ul class="usa-sidenav-list">
+                    <li>
+                      <a href="#">Link</a>
+                    </li>
+                    <li class="active-level">
+                      <a class="usa-current" href="#">Current section</a>
+                    </li>
+                    <li>
+                      <a href="#">Link</a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                <button class="usa-accordion-button" aria-expanded="false" aria-controls="a3">
+                  Third nav section
+                </button>
+                <div id="a3" class="usa-accordion-content" aria-hidden="true">
+                  <ul class="usa-sidenav-list">
+                    <li>
+                      <a href="#">Link</a>
+                    </li>
+                    <li>
+                      <a href="#">Link</a>
+                    </li>
+                    <li>
+                      <a href="#">Link</a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
           </div>
+        </nav>
+      </div>
+      <div class="vads-l-col--12 vads-u-padding-x--2p5 medium-screen:vads-l-col--8 large-screen:vads-l-col--9">
+        <div style={{ opacity: 0.5 }}>
+          <h1 class="vads-u-margin-top--0">Page content would appear here.</h1>
+          <p class="va-introtext"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dictum mauris at laoreet dictum.</p>
+          <p>Mauris ultrices pellentesque lobortis. Ut sed libero vitae orci maximus molestie et id justo. Donec feugiat elit sed pretium condimentum. Sed in cursus dui, eget sodales nisl. In hac habitasse platea dictumst. Fusce eu lacus in purus sodales ullamcorper scelerisque in massa. Duis venenatis, orci nec lacinia dictum, nisl eros lobortis sapien, vel pharetra nisi nulla quis tortor.  </p>
+          <p>Mauris ultrices pellentesque lobortis. Ut sed libero vitae orci maximus molestie et id justo. Donec feugiat elit sed pretium condimentum. Sed in cursus dui, eget sodales nisl. In hac habitasse platea dictumst. Fusce eu lacus in purus sodales ullamcorper scelerisque in massa. Duis venenatis, orci nec lacinia dictum, nisl eros lobortis sapien, vel pharetra nisi nulla quis tortor.  </p>
+          <p>Mauris ultrices pellentesque lobortis. Ut sed libero vitae orci maximus molestie et id justo. Donec feugiat elit sed pretium condimentum. Sed in cursus dui, eget sodales nisl. In hac habitasse platea dictumst. Fusce eu lacus in purus sodales ullamcorper scelerisque in massa. Duis venenatis, orci nec lacinia dictum, nisl eros lobortis sapien, vel pharetra nisi nulla quis tortor.  </p>
         </div>
       </div>
-    )}
-  </Story>
+    </div>
+  </div>
 </Canvas>
 
 * All elements, including the `<script>` tag in the snippet are required. An update to Formation's script may address this.
