--- a/packages/formation-react/stories/process-list.stories.mdx
+++ b/packages/formation-react/stories/process-list.stories.mdx
@@ -1,4 +1,4 @@
-import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
+import { Canvas, Meta } from '@storybook/addon-docs/blocks';
 
 <Meta title="Library/Process list" />
 
@@ -8,24 +8,20 @@ The process list, also known as the subway map, is used in a static informationa
 
 
 <Canvas>
-  <Story name="Usage">
-    {() => (
-      <ol class="process">
-        <li class="process-step list-one">
-          <b>Heading for step one.</b><br/>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-       </li>
-        <li class="process-step list-two">
-          <b>Heading for step two.</b><br/>
-          Sed sed mi mattis orci posuere suscipit. Nunc eu sapien sit amet nibh finibus rutrum. Duis sit amet libero sapien. Nam cursus lobortis tincidunt.
-        </li>
-        <li class="process-step list-three">
-          <b>Heading for step three.</b><br/>
-          Fusce sit amet egestas elit, id suscipit dolor. Nam sed augue nibh. In euismod aliquam lacinia
-       </li>
-      </ol>
-    )}
-  </Story>
+  <ol class="process">
+    <li class="process-step list-one">
+      <b>Heading for step one.</b><br/>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+   </li>
+    <li class="process-step list-two">
+      <b>Heading for step two.</b><br/>
+      Sed sed mi mattis orci posuere suscipit. Nunc eu sapien sit amet nibh finibus rutrum. Duis sit amet libero sapien. Nam cursus lobortis tincidunt.
+    </li>
+    <li class="process-step list-three">
+      <b>Heading for step three.</b><br/>
+      Fusce sit amet egestas elit, id suscipit dolor. Nam sed augue nibh. In euismod aliquam lacinia
+   </li>
+  </ol>
 </Canvas>
 
 ## Usability
