URLs are dumb :unamused:

--- a/packages/formation-react/stories/sidenav.stories.mdx
+++ b/packages/formation-react/stories/sidenav.stories.mdx
@@ -116,7 +116,7 @@ Hierarchical, vertical navigation to place at the side of a page.
 * If your content is within a frame or sub-area of a page, consider ways to simplify your navigation system.
 
 ### Guidance
-* Typically used in a [two-column layout](/layout/page-templates#two-columns-content-on-right).
+* Typically used in a [two-column layout](../layout/page-templates#two-columns-content-on-right).
 * Indicate where a user is within the navigational hierarchy. Use the “active” state to show users which page they have navigated to.
 * Keep the navigation links short. They can be shorter derivatives of page titles themselves.
 * If the navigation hierarchy is too long, users may miss items at the bottom. If it’s too deep, users may miss items that require too many clicks. Usability test to find the right balance between breadth and depth.
