Move Introduction story

--- a/packages/formation-react/stories/introduction.stories.mdx
+++ b/packages/formation-react/stories/introduction.stories.mdx
@@ -19,3 +19,7 @@ feedback, please let us know in #vsp-design-system and we'll put you on the
 list.
 
 Enjoy!
+
+# How to use Storybook
+See <a href="/about-how-to-use-storybook">How to use Storybook</a> for some
+quick guidance on how to get the most out of storybook.
