--- a/packages/formation-react/stories/introduction.stories.mdx
+++ b/packages/formation-react/stories/introduction.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta } from '@storybook/addon-docs/blocks';
+import LinkTo from '@storybook/addon-links/react'
 
 <Meta title="About/Introduction" />
 
@@ -21,5 +22,6 @@ list.
 Enjoy!
 
 # How to use Storybook
-See <a href="/about-how-to-use-storybook">How to use Storybook</a> for some
-quick guidance on how to get the most out of storybook.
+See <LinkTo kind="About" story="How to use Storybook">How to use
+Storybook</LinkTo> for some quick guidance on how to get the most out of
+storybook.
