--- a/packages/formation-react/stories/introduction.stories.mdx
+++ b/packages/formation-react/stories/introduction.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta } from '@storybook/addon-docs/blocks';
+import LinkTo from '@storybook/addon-links/react'
 
 <Meta title="About/Introduction" />
 
@@ -19,3 +20,8 @@ feedback, please let us know in #vsp-design-system and we'll put you on the
 list.
 
 Enjoy!
+
+# How to use Storybook
+See <LinkTo kind="About" story="How to use Storybook">How to use
+Storybook</LinkTo> for some quick guidance on how to get the most out of
+storybook.
