Add some styling to footerNav for better visual

--- a/packages/formation-react/stories/back-to-top.stories.mdx
+++ b/packages/formation-react/stories/back-to-top.stories.mdx
@@ -105,7 +105,7 @@ The "Back to top" button will appear after the use has scrolled partway down the
         </div>
       </div>
     </div>
-  <div id="footerNav">Footer</div>
+  <div id="footerNav" style={{backgroundColor: "#112e51", color: "white", padding: "4em"}}>Footer</div>
   </div>
   </Story>
 </Canvas>
