Remove usa-width-three-fourths
This doesn't seem to change anything visually

--- a/packages/formation-react/stories/back-to-top.stories.mdx
+++ b/packages/formation-react/stories/back-to-top.stories.mdx
@@ -93,7 +93,7 @@ The "Back to top" button will appear after the use has scrolled partway down the
     </main>
     <div id="top-button-container">
       <div class="usa-grid usa-grid-full">
-        <div class="usa-width-three-fourths" id="usa-width-container">
+        <div id="usa-width-container">
           <div class="usa-content">
             <button type="button" className="usa-button vads-u-background-color--gray-dark vsa-top-button vads-u-display--flex vads-u-align-items--center">
               <i aria-hidden="true" class="fas fa-arrow-up vads-u-margin-right--0 medium-screen:vads-u-margin-right--1p5 medium-screen:vads-u-font-size--sm" role="img"></i>
