Remove "Back to top" p tag & do it in CSS

--- a/packages/formation-react/stories/back-to-top.stories.mdx
+++ b/packages/formation-react/stories/back-to-top.stories.mdx
@@ -94,11 +94,7 @@ The "Back to top" button will appear after the use has scrolled partway down the
     <div id="top-button-container">
       <div class="usa-grid usa-grid-full">
           <div class="usa-content">
-            <button type="button" className="usa-button vads-u-display--flex vads-u-align-items--center">
-              <p class="vads-u-display--none vads-u-color--white vads-u-margin--0 medium-screen:vads-u-display--block">
-                Back to top
-              </p>
-            </button>
+            <button type="button" className="usa-button vads-u-display--flex vads-u-align-items--center" />
           </div>
       </div>
     </div>
