Remove redundant flex classes
No longer necessary once the child nodes have been removed. The flex
styling in the CSS file can likely be removed as well

--- a/packages/formation-react/stories/back-to-top.stories.mdx
+++ b/packages/formation-react/stories/back-to-top.stories.mdx
@@ -93,9 +93,9 @@ The "Back to top" button will appear after the use has scrolled partway down the
     </main>
     <div id="top-button-container">
       <div class="usa-grid usa-grid-full">
-          <div class="usa-content">
-            <button type="button" className="usa-button vads-u-display--flex vads-u-align-items--center" />
-          </div>
+        <div class="usa-content">
+          <button type="button" className="usa-button" />
+        </div>
       </div>
     </div>
   <div id="footerNav" style={{backgroundColor: "#112e51", color: "white", padding: "4em"}}>Footer</div>
