--- a/packages/formation-react/src/components/ProgressBar/ProgressBar.mdx
+++ b/packages/formation-react/src/components/ProgressBar/ProgressBar.mdx
@@ -13,6 +13,7 @@ import ProgressBar from '@department-of-veterans-affairs/formation-react/Progres
 
 <div className="site-c-reactcomp__rendered">
   <ProgressBar
+    label="add label here"
     percent={35}
   />
 </div>
@@ -22,6 +23,7 @@ import ProgressBar from '@department-of-veterans-affairs/formation-react/Progres
 
 <div className="site-c-reactcomp__rendered">
   <ProgressBar
+    label="add label here"
     percent={35}
   />
 </div>
