Add some comments

--- a/packages/formation-react/stories/back-to-top.stories.mdx
+++ b/packages/formation-react/stories/back-to-top.stories.mdx
@@ -4,7 +4,7 @@ import { Canvas, Meta } from '@storybook/addon-docs/blocks';
 
 # Back to top
 
-The "Back to top" button will appear after the use has scrolled partway down the page, and clicking it will take them to the top
+The "Back to top" button will appear after the user has scrolled partway down the page, and clicking it will take them to the top
 
 The _actual_ BTT component consists of the following - the rest is just context:
 
