Make changes after review comments

--- a/packages/formation-react/stories/back-to-top.stories.mdx
+++ b/packages/formation-react/stories/back-to-top.stories.mdx
@@ -9,7 +9,7 @@ The "Back to top" button will appear after the user has scrolled partway down th
 The _actual_ BTT component consists of the following - the rest is just context:
 
 ```html
-  <div id="top-button-container">
+  <div id="back-to-top-container">
     <div class="usa-content">
       <button type="button" className="usa-button" />
     </div>
@@ -69,7 +69,7 @@ The _actual_ BTT component consists of the following - the rest is just context:
       <p>Some more</p>
       <p>Some more</p>
     </main>
-    <div id="top-button-container">
+    <div id="back-to-top-container">
         <div class="usa-content">
           <button type="button" className="usa-button" />
         </div>
