Adjust the layout

--- a/packages/formation-react/stories/back-to-top.stories.mdx
+++ b/packages/formation-react/stories/back-to-top.stories.mdx
@@ -18,7 +18,7 @@ The _actual_ BTT component consists of the following - the rest is just context:
 
 <Canvas>
   <Story name="default">
-  <div>
+  <div class="usa-content">
     <main>
       <p>Lorem ipsum</p>
       <p>Some more</p>
@@ -74,8 +74,8 @@ The _actual_ BTT component consists of the following - the rest is just context:
           <button type="button" className="usa-button" />
         </div>
     </div>
-  <div id="footerNav" style={{backgroundColor: "#112e51", color: "white", padding: "4em"}}>Footer</div>
   </div>
+  <div id="footerNav" style={{backgroundColor: "#112e51", color: "white", padding: "4em"}}>Footer</div>
   </Story>
 </Canvas>
 
