Move usage docs

--- a/packages/formation-react/src/components/CollapsiblePanel/usage.stories.mdx
+++ b/packages/formation-react/src/components/CollapsiblePanel/usage.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Library/CollapsiblePanel/Usage" />
+<Meta title="Designer Documentation/Accordion" />
 
 # `CollapsiblePanel` (a.k.a. Accordions)
 
