--- a/packages/formation-react/src/components/PromoBanner/usage.stories.mdx
+++ b/packages/formation-react/src/components/PromoBanner/usage.stories.mdx
@@ -3,7 +3,7 @@ import { Canvas, Meta } from '@storybook/addon-docs/blocks';
 
 import PromoBanner, { PROMO_BANNER_TYPES } from './PromoBanner';
 
-<Meta title="Library/Banners/PromoBanner/Usage" />
+<Meta title="Designer Documentation/Promo Banner" />
 
 export const Template = args => {
   const [showBanner, setShowBanner] = useState(false);
