--- a/packages/formation-react/src/components/Table/usage.stories.mdx
+++ b/packages/formation-react/src/components/Table/usage.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Library/Table/Usage" />
+<Meta title="Designer Documentation/Table" />
 
 # Tables
 
