--- a/packages/formation-react/stories/featured-content.stories.mdx
+++ b/packages/formation-react/stories/featured-content.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Canvas } from '@storybook/addon-docs/blocks';
 
-<Meta title="Library/Featured content" />
+<Meta title="Components/Featured content" />
 
 # Featured content
 
