--- a/packages/formation-react/stories/process-list.stories.mdx
+++ b/packages/formation-react/stories/process-list.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Library/Process list" />
+<Meta title="Components/Process list" />
 
 <Canvas>
   <ol class="process">
