Reorganize sidebar nav (#567)
* Delete breadcrumbs docs

I don't think they're useful. :shrug:

* Split dual-purpose files

* Move usage docs

* Move buttons to designer documentation

* Not Buttons/Usage

* Library -> Components

* Move form controls to designer docs

* Remove usage...

--- a/packages/formation-react/stories/process-list.stories.mdx
+++ b/packages/formation-react/stories/process-list.stories.mdx
@@ -1,11 +1,6 @@
 import { Canvas, Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Library/Process list" />
-
-# Process lists
-
-The process list, also known as the subway map, is used in a static informational context to describe the process to apply for a benefit or to provide tracking information to a user where they are in a given process.
-
+<Meta title="Components/Process list" />
 
 <Canvas>
   <ol class="process">
@@ -23,22 +18,3 @@ The process list, also known as the subway map, is used in a static informationa
    </li>
   </ol>
 </Canvas>
-
-## Usability
-
-### Guidance
-
-- Can be used to display up to 20 steps.
-- List headings should start with a verb.
-- Make headings clear and concise. You can always write more content in paragraphs and other HTML elements below the heading.
-- Do not stack.
-
-### When to use
-
-- When users need to see a list of sequential steps.
-- In a multi-step process where the user may need to track progress over an extended period.
-
-### When to consider something else
-
-- The list is a checklist.
-- The information is not sequential.
