--- a/packages/formation-react/stories/buttons.stories.mdx
+++ b/packages/formation-react/stories/buttons.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Canvas } from '@storybook/addon-docs/blocks';
 
-<Meta title="Library/Buttons/Usage" />
+<Meta title="Designer Documentation/Buttons" />
 
 # Buttons
 
