--- a/packages/formation-react/stories/form-controls.stories.mdx
+++ b/packages/formation-react/stories/form-controls.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Library/Form controls/Usage" />
+<Meta title="Designer Documentation/Form controls" />
 
 # Form controls
 
